[PR] 이벤트 참여하기 API 리펙토링 (#54)
* feat : 유저 타입이 맞는지 확인하는 기능 추가

* test : 이벤트 게스트 로그인 API 테스트 추가

* test : 이벤트 게스트 이벤트 참여 API 테스트 추가

* fix: 이벤트 게스트 이벤트 참여 API 테스트 통과

* refactor : 네이밍 변경 day -> week

* feat : 이벤트 참여 가능한 시간 엔티티 추가

* refactor : 이벤트 참여 가능한 시간 저장방식 변경

* feat : 이벤트 참여 참여 가능한 시간 Entity 추가

* feat : 게스트 이벤트 참여 기능 추가

* feat : 이벤트 조회시 모든 데이터 나오도록 수정

* test : 모든 테스트 통과하도록 수정